# ros1_ws

./: notes.txt  readme.txt
devel/: .catkin  local_setup.sh
devel/include/tutorial_cpp/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Person.h
devel/include/tutorial_python/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Person.h
devel/lib/pkgconfig/: tutorial_cpp.pc  tutorial_python.pc
devel/lib/python3/dist-packages/tutorial_cpp/msg/: _Person.py
devel/lib/python3/dist-packages/tutorial_cpp/srv/: _AddTwoInts.py
devel/lib/python3/dist-packages/tutorial_python/msg/: _Person.py
devel/lib/python3/dist-packages/tutorial_python/srv/: _AddTwoInts.py
devel/lib/tutorial_cpp/: pub  sub
devel/share/common-lisp/ros/tutorial_cpp/msg/: Person.lisp  _package.lisp  _package_Person.lisp  tutorial_cpp-msg.asd
devel/share/roseus/ros/tutorial_cpp/: manifest.l
devel/share/roseus/ros/tutorial_python/: manifest.l
devel/share/tutorial_cpp/cmake/: tutorial_cpp-msg-extras.cmake  tutorial_cpp-msg-paths.cmake  tutorial_cppConfig.cmake
devel/share/tutorial_python/cmake/: tutorial_python-msg-extras.cmake  tutorial_python-msg-paths.cmake  tutorial_pythonConfig.cmake
src/tutorial_cpp/: CMakeLists.txt
src/tutorial_cpp/msg/: Person.msg
src/tutorial_cpp/src/: publisher.cpp  subscriber.cpp
src/tutorial_python/: CMakeLists.txt  package.xml
src/tutorial_python/launch/: client_server.launch  publisher_subscriber.launch
src/tutorial_python/scripts/: client.py  node.py  publisher.py  server.py  subscriber.py
(+20 files in other folders)
