<?xml version="1.0"?>
<package format="2">
  <name>tutorial_python</name>
  <version>0.0.0</version>
  <description>The tutorial_python package</description>
  <author email="moajouz.work@gmail.com">moajouz</author>
  <maintainer email="moajouz.work@gmail.com">moajouz</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
